src/main/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: e-shop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: e-shop
  template:
    metadata:
      labels:
        app: e-shop
    spec:
      containers:
        - name: e-shop
          image: angryjavadeveloper/e-shop:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: regcred
