src/main/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: e-shop
spec:
  selector:
    app: e-shop
  ports:
    - protocol: "TCP"
      port: 8000
      targetPort: 8000
  type: LoadBalancer
