src/main/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: e-shop
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    -  host: arch.homework
       http:
         paths:
           - path: /
             pathType: Prefix
             backend:
               service:
                 name: e-shop
                 port:
                   number: 8000
